<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_payment"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_paymemt" />

        <item
            android:id="@+id/nav_ticket"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_ticket" />

        <item
            android:id="@+id/nav_review"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_review" />
    </group>



</menu>
