<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_map">

    <fragment
        android:id="@+id/nav_map"
        android:name="com.example.movieapp.ui.map.MapFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_review" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.movieapp.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_payment"
        android:name="com.example.movieapp.ui.payment.PaymentFragment"
        android:label="@string/menu_paymemt"
        tools:layout="@layout/fragment_payment" />

    <fragment
    android:id="@+id/nav_ticket"
    android:name="com.example.movieapp.ui.nearbytheatre.MainFragment"
    android:label="@string/menu_ticket"
    tools:layout="@layout/fragment_ticket" />

    <fragment
        android:id="@+id/nav_review"
        android:name="com.example.movieapp.ui.review.ReviewFragment"
        android:label="@string/menu_review"
        tools:layout="@layout/fragment_review" />


</navigation>