<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgound">


    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvNameofCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/name_on_card"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/edCardName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:backgroundTint="@android:color/white"
            android:textColor="@android:color/white"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/tvCardNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/card_number"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/edCardNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:backgroundTint="@android:color/white"
            android:inputType="number"
            android:textColor="@android:color/white"
            android:maxLength="16" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/expiry_date"
            android:textColor="@android:color/white"/>

        <EditText
            android:id="@+id/edExpireDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:backgroundTint="@android:color/white"
            android:inputType="datetime"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/tvCvv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/cvv"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/edCvv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:backgroundTint="@android:color/white"
            android:inputType="number"
            android:maxLength="3"
            android:textColor="@android:color/white" />

    </LinearLayout>


    <Button
        android:id="@+id/buttonSave"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mainLayout"
        android:layout_marginStart="109dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="104dp"
        android:background="@drawable/plan_button_selector"
        android:text="@string/save"
        android:textColor="@android:color/white" />
</RelativeLayout>