<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/backgound">
    <RelativeLayout
        android:id="@+id/topRl"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:elevation="6dp"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:id="@+id/backBtn"
            android:layout_width="56dp"
            android:layout_height="56dp"
            >

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerInParent="true"
                android:background="@drawable/ic_back"
                tools:ignore="ContentDescription" />


        </RelativeLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_toEndOf="@+id/backBtn"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Book Ticket"
                android:textColor="@android:color/white"
                android:textSize="20sp" />


        </LinearLayout>


    </RelativeLayout>


    <!-- Text Label -->
    <TextView
        android:layout_below="@+id/topRl"
        android:id="@+id/tvShowTime"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dip"
        android:layout_marginBottom="5dp"
        android:text="@string/show_timing"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <!-- Spinner Element -->
    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvShowTime"
        android:layout_marginStart="20dp"

        android:layout_marginEnd="20dp"
        android:background="@android:drawable/btn_dropdown"
        android:prompt="@string/spinner_title" />

    <!-- Text Label -->
    <TextView
        android:id="@+id/tvQty"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dip"
        android:layout_marginBottom="5dp"
        android:text="@string/qty"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <!-- Spinner Element -->
    <Spinner
        android:id="@+id/spinnerQty"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvQty"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@android:drawable/btn_dropdown"
        android:prompt="@string/spinner_title" />

    <!-- Text Label -->
    <TextView
        android:id="@+id/tvMovieList"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinnerQty"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dip"
        android:layout_marginBottom="5dp"
        android:text="All Movie List Available for this timing slots:"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/movieLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvMovieList"
        android:layout_marginTop="20dip"
        android:orientation="vertical">
        <!-- Text Label -->
        <TextView
            android:id="@+id/tvMovieFirst"

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"

            android:layout_marginStart="20dp"
            android:layout_marginBottom="5dp"
            android:text="@string/mission_impossible"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="italic" />

        <!-- Text Label -->
        <TextView
            android:id="@+id/tvMovieSecond"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvMovieFirst"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dip"
            android:layout_marginBottom="5dp"
            android:text="@string/irom_man_3"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="italic" />

        <!-- Text Label -->
        <TextView
            android:id="@+id/tvMovieThird"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvMovieSecond"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dip"
            android:layout_marginBottom="5dp"
            android:text="@string/superman"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="italic" />

        <!-- Text Label -->
        <TextView
            android:id="@+id/tvMovieFour"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvMovieThird"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dip"
            android:layout_marginBottom="5dp"
            android:text="@string/batman_begins"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="italic" />

    </LinearLayout>


    <TextView
        android:id="@+id/text_tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/btNext"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/movieLayout"
        android:layout_marginStart="100dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/plan_button_selector"
        android:text="Book Ticket"
        android:textColor="@android:color/white" />

</RelativeLayout>