<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgound"
    android:orientation="vertical">

    <FrameLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="5dp"
            android:text="@string/mission_impossible"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="italic" />

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rating="5"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="5dp" />
    </FrameLayout>

    <FrameLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="5dp"
            android:text="@string/irom_man_3"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="italic" />

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rating="4"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="5dp" />
    </FrameLayout>


    <FrameLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="5dp"
            android:text="@string/superman"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="italic" />

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:rating="4"
            android:layout_marginEnd="5dp" />
    </FrameLayout>


    <FrameLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="5dp"
            android:text="@string/batman_begins"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="italic" />

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:rating="3"
            android:layout_marginEnd="5dp" />
    </FrameLayout>


</LinearLayout>