<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgound"
    android:orientation="vertical">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="110dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_gravity="bottom">

        <TextView
            android:id="@+id/latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:textColor="@android:color/white"
            android:text="@string/latitude"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/latitude_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/latitude"
            android:layout_marginStart="10dp"
            android:textColor="@android:color/white"
            android:layout_toEndOf="@+id/latitude"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:textColor="@android:color/white"
            android:layout_marginTop="24dp"
            android:layout_marginStart="20dp"
            android:text="@string/longitude"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/longitude_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/longitude"
            android:layout_marginStart="10dp"
            android:textColor="@android:color/white"
            android:layout_toEndOf="@+id/longitude"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btlocate"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/longitude_textview"
            android:layout_marginStart="100dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/plan_button_selector"
            android:text="@string/locate_me"
            android:textColor="@android:color/white" />


    </RelativeLayout>


</FrameLayout>

